Adjust filename from intro to index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="title">
       <h1 id="heading"> Roadtrip Fuel Costs</h1>
       <h3 id="subHeading"> How much will it cost? Use our handy site to estimate fuel costs!<h3>
-      <button class="nav"><a class="linkBtn" href="intro.html">Home</a></button>
+      <button class="nav"><a class="linkBtn" href="index.html">Home</a></button>
       <button class="nav"><a class="linkBtn" href="main.html">Cost Calculator</a></button>
       <button class="nav"><a class="linkBtn" href="list.html">Saved Trips</a></button>
     </header>
