--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <header class="title">
       <h1 id="head"> Roadtrip Fuel Costs</h1>
       <h3 id="head"> How much will it cost? Use our handy site to estimate fuel costs!<h3>
-      <button class="nav"><a href="intro.html">Home</a></button>
+      <button class="nav"><a href="index.html">Home</a></button>
       <button class="nav"><a href="main.html">Cost Calculator</a></button>
       <button class="nav"><a href="list.html">Saved Trips</a></button>
     </header>
